<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ECE489A Companion App</string>
    <string name="title_home">Home</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_tracker">Tracker</string>
    <string name="title_companion">Companion</string>
    <string name="title_settings">Settings</string>
    <string name="tracker_screen_title">Today\'s Progress</string>
    <string name="tracker_water">Water</string>
    <string name="tracker_sleep">Sleep</string>
    <string name="tracker_meditation">Meditation</string>
    <string name="tracker_exercise">Exercise</string>
    <string name="tracker_food">Food</string>
    <string name="tracker_substance_abuse">Substance Abuse</string>
    <string name="title_water_tracker">Track Today\'s Water Intake</string>
    <string name="title_weekly_water_tracker">Your Weekly Water Intake</string>
    <string name="title_exercise_tracker">Track Today\'s Exercise</string>
    <string name="title_weekly_exercise_tracker">Your Weekly Exercise</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="delete_confirm">Delete this task?</string>
    <string name="delete">Delete</string>
    <string name="check_confirm">Mark this task as complete?</string>
    <string name="check">Yes</string>
    <string name="close">Close</string>
    <string name="title_calendar_view">Calendar  View</string>
    <string name="calendar_task_input_title">Add a task</string>
    <string name="calendar_task_input_empty">The field cannot be blank</string>
    <string name="calendar_task_input_illegal">Illegal input</string>
    <string name="calendar_task_input_duplicate">Duplicate entry</string>
    <string name="title_sleep_tracker">Track Yesterday\'s Hours Slept</string>
    <string name="title_weekly_sleep_tracker">Your Weekly Hours Slept</string>
    <string name="title_meditation_tracker">Track Today\'s Minutes Meditated</string>
    <string name="title_weekly_meditation_tracker">Your Weekly Minutes Meditated</string>
    <string name="title_food_tracker">Track Today\'s Food Intake</string>
    <string name="title_weekly_food_tracker">Your Weekly Food Intake</string>
    <string name="companion_face_decorator">Companion Face Decorator</string>
    <string name="companion_head_decorator">Companion Head Decorator</string>
    <string name="tracker_disclaimer">It\'s important to note that individual needs may differ and these are just general recommendations. Consulting with a healthcare professional can provide personalized recommendations based on your specific health circumstances.</string>
    <string name="current_user_name">Emily</string><!--will change this later-->
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string-array name="water_array">
        <item>Default</item>
        <item>&lt;500 ml</item>
        <item>500-1000 ml</item>
        <item>1000-1500 ml</item>
        <item>1500-2000 ml</item>
        <item>2000 ml+</item>
    </string-array>
    <string-array name="sleep_array">
        <item>Default</item>
        <item>&lt;4 hrs</item>
        <item>4-5 hrs</item>
        <item>5-6 hrs</item>
        <item>6-7 hrs</item>
        <item>7-8 hrs</item>
        <item>8-9 hrs</item>
        <item>9-10 hrs</item>
        <item>10 hrs+</item>
    </string-array>
    <string-array name="meditation_array">
        <item>Default</item>
        <item>&lt;5 mins</item>
        <item>5-10 mins</item>
        <item>10-15 mins</item>
        <item>15-20 mins</item>
        <item>20-25 mins</item>
        <item>25-30 mins</item>
        <item>30-45 mins</item>
        <item>45 mins+</item>
    </string-array>
    <string-array name="exercise_array">
        <item>Default</item>
        <item>&lt;15 mins</item>
        <item>15-30 mins</item>
        <item>30-45 mins</item>
        <item>45-60 mins</item>
        <item>75-90 mins</item>
        <item>90-105 mins</item>
        <item>105-120 mins</item>
        <item>120 mins+</item>
    </string-array>
    <string-array name="food_array">
        <item>Default</item>
        <item>&lt;500 cal</item>
        <item>500-1000 cal</item>
        <item>1000-1500 cal</item>
        <item>1500-2000 cal</item>
        <item>2500-3000 cal</item>
        <item>3000-3500 cal</item>
        <item>3500-4000 cal</item>
        <item>4000 cal+</item>
    </string-array>
    <string-array name="substance_abuse_array">
        <item>Default</item>
        <item>&lt;1 day</item>
        <item>1-2 days</item>
        <item>2-3 days</item>
        <item>3-4 days</item>
        <item>4-5 days</item>
        <item>5-6 days</item>
        <item>6-7 days</item>
        <item>7 days+</item>
    </string-array>
    <string-array name="greetings">
        <item>Hello, </item>
        <item>Good Morning, </item>
        <item>Good Afternoon, </item>
        <item>Good Evening, </item>
        <item>Good Night, </item>
    </string-array>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="full_name">Full Name</string>
    <string name="your_information">YOUR INFORMATION</string>
    <string name="age">age</string>
    <string name="Age">Age</string>
    <string name="height_cm">Height (cm)</string>
    <string name="weight_kg">Weight (kg)</string>
    <string name="personal_information">Personal Information</string>
    <string name="confirm">Confirm</string>
    <string name="message">Message</string>
    <string name="title">Title</string>
</resources>